moving camera and vectors into their own files

--- a/GLTest.vcxproj
+++ b/GLTest.vcxproj
@@ -138,9 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\camera.cpp" />
     <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\canvas.cpp" />
     <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\shapes.cpp" />
-    <ClCompile Include="3d.cpp">
+    <ClCompile Include="vector.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> /EHsc   /EHsc </AdditionalOptions>
     </ClCompile>
     <ClCompile Include="main.cpp">
@@ -154,9 +155,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\camera.h" />
     <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\canvas.h" />
     <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\shapes.h" />
-    <ClInclude Include="3d.h" />
+    <ClInclude Include="vector.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="tools.h" />
     <ClInclude Include="utility.h" />
