--- a/GLTest.vcxproj
+++ b/GLTest.vcxproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\camera.cpp" />
     <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\canvas.cpp" />
-    <ClCompile Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\shapes.cpp" />
+    <ClCompile Include="scenes.cpp" />
     <ClCompile Include="vector.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> /EHsc   /EHsc </AdditionalOptions>
     </ClCompile>
@@ -157,7 +157,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\camera.h" />
     <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\canvas.h" />
-    <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\shapes.h" />
+    <ClInclude Include="scenes.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="tools.h" />
