--- a/GLTest.vcxproj.filters
+++ b/GLTest.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="rgba_win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Rob%27s Files\Development\wxWidgets\GLTest\debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="main.rc">
